samples/_failures_safe/1761255235_d87123_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a1d93b1.c: In function ‘main’:
./samples/SAFE/__tmp_1a1d93b1.c:147: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_1a1d93b1.c:146:9: error: expected declaration or statement at end of input
  146 |         if
      |         ^~
./samples/SAFE/__tmp_1a1d93b1.c:146:9: error: expected declaration or statement at end of input
